compiler/tests-spec/testData/psi/linked/constant-literals/boolean-literals/p-1/neg/2.3.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-draft
 * PLACE: constant-literals, boolean-literals -> paragraph 1 -> sentence 2
 * NUMBER: 3
 * DESCRIPTION: The use of Boolean literals as the identifier (without backtick) in the typeConstraint.
 * NOTE: this test data is generated by FeatureInteractionTestDataGenerator. DO NOT MODIFY CODE MANUALLY!
 */

class A <true, false>
        where true : CharSequence,
              false : Comparable<true>

annotation class B <false>
        where true : CharSequence,
              @A<List<Nothing?>> @B false : Comparable<true>

annotation class C <false, true> where @property:C false : CharSequence, true : Comparable<false>

fun <true, false> d(): Boolean
        where true : Any,
              false : Iterable<*>,
              true : Collection<*>,
              false : MutableCollection<*>,
              true : Comparable<false> = true == false